--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,6 +18,7 @@ body {
     margin: 0;
     background: $color-surface-0;
     color: $color-on-surface;
+    @include content-body;
 }
 
 .content {
