move background to html element instead of body and adjust surface 0 colors

--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -3,7 +3,7 @@ $color-light-on-primary: #CCEFD4;
 $color-light-primary-container: #86E39C;
 $color-light-on-primary-container: #08581B;
 
-$color-light-surface-0: #ffffff;
+$color-light-surface-0: #FAFFFA;
 $color-light-surface-1: #ECFEEC;
 $color-light-surface-2: #E1FAE1;
 
@@ -18,7 +18,7 @@ $color-dark-on-primary: #002908;
 $color-dark-primary-container: #2C5E35;
 $color-dark-on-primary-container: #DFF9DC;
 
-$color-dark-surface-0: #000000;
+$color-dark-surface-0: #000502;
 $color-dark-surface-1: #01230C;
 $color-dark-surface-2: #0F2E1A;
 
