--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,13 +13,15 @@
     color: $color-on-surface;
 }
 
+html {
+    background: $color-surface-0;
+    color: $color-on-surface;
+    @include content-body;
+}
+
 body {
     padding: 0;
     margin: 0;
-    background: $color-surface-0;
-    background-size: cover;
-    color: $color-on-surface;
-    @include content-body;
 }
 
 .content {
