add min-height: 100% to html

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,7 @@ html {
     background: $color-surface-0;
     color: $color-on-surface;
     @include content-body;
+    min-height: 100%;
 }
 
 body {
