change dark surface 1 color

--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -19,7 +19,7 @@ $color-dark-primary-container: #2C5E35;
 $color-dark-on-primary-container: #DFF9DC;
 
 $color-dark-surface-0: #000502;
-$color-dark-surface-1: #01230C;
+$color-dark-surface-1: #001A08;
 $color-dark-surface-2: #0F2E1A;
 
 $color-dark-on-surface: #ffffff;
