--- a/_sass/spacing.scss
+++ b/_sass/spacing.scss
@@ -1,4 +1,5 @@
 $spacing-scale: (4/3);
-$spacing-small: 10px;
+$spacing-small: 8px;
 $spacing-medium: calc(#{$spacing-small} * pow(#{$spacing-scale}, 1));
 $spacing-large: calc(#{$spacing-small} * pow(#{$spacing-scale}, 2));
+$spacing-xlarge: calc(#{$spacing-small} * pow(#{$spacing-scale}, 3));
