update dark surface colors

--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -20,9 +20,9 @@ $color-dark-primary-container: #1F582A;
 $color-dark-on-primary-container: #E5FCE2;
 
 $color-dark-surface-0: #000502;
-$color-dark-surface-1: #001A08;
-$color-dark-surface-2: #00290D;
-$color-dark-surface-3: #003910;
+$color-dark-surface-1: #001405;
+$color-dark-surface-2: #011F0A;
+$color-dark-surface-3: #00290E;
 
 $color-dark-on-surface: #ffffff;
 $color-dark-on-surface-less: #bbbbbb;
