add baseurl and fix links hopefully maybe

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,16 +10,16 @@
         {% endif %}
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono">
-        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
     </head>
     <body>
         <div id="topbarbox">
             <div id="topbarthings" class="notfullwidth">
                 <div id="homelinkitem">
-                <a href="/" id="homelink" class="navlink">{{ site.title }}</a>
+                    <a href="{{ "/" | relative_url }}" id="homelink" class="navlink">{{ site.title }}</a>
                 </div>
                 <nav>
-                    <a href="/about" class="navlink">About</a>
+                    <a href="{{ "/about" | relative_url }}" class="navlink">About</a>
                 </nav>
             </div>
         </div>
