--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <h1 class="title">{{ page.title }}</h1>
-<section>
+<section class="markdowncontent">
     {{ content }}
 </section>
