--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -64,66 +64,66 @@ body {
     @include ui-big;
 }
 
-.content .title {
+.postcontent .title {
     @include content-title;
     margin-top: $spacing-xlarge;
     margin-bottom: $spacing-xlarge;
     color: $color-on-surface;
 }
-.content h1 {
+.postcontent h1 {
     @include content-h1;
     margin-top: $spacing-xlarge;
     margin-bottom: $spacing-large;
     color: $color-on-surface;
 }
-.content h2 {
+.postcontent h2 {
     @include content-h2;
     margin-top: $spacing-large;
     margin-bottom: $spacing-medium;
     color: $color-on-surface;
 }
-.content h3 {
+.postcontent h3 {
     @include content-h3;
     margin-top: $spacing-medium;
     margin-bottom: $spacing-medium;
     color: $color-on-surface;
 }
-.content h4 {
+.postcontent h4 {
     @include content-h4;
     margin-top: $spacing-medium;
     margin-bottom: $spacing-small;
     color: $color-on-surface;
 }
-.content h5 {
+.postcontent h5 {
     @include content-h5;
     margin-top: $spacing-medium;
     margin-bottom: $spacing-small;
     color: $color-on-surface;
 }
-.content h6 {
+.postcontent h6 {
     @include content-h6;
     margin-top: $spacing-medium;
     margin-bottom: $spacing-small;
     color: $color-on-surface;
 }
-.content p {
+.postcontent p {
     @include content-body;
     margin-top: $spacing-small;
     margin-bottom: $spacing-small;
     color: $color-on-surface;
 }
 
-.content a {
+.postcontent a {
     @include content-body;
     text-decoration: underline;
     color: $color-primary;
 }
 
-.content code {
+.postcontent code {
     @include content-code;
 }
 
-.content pre {
+.postcontent pre {
     background: $color-surface-1;
     padding: $spacing-large;
     border-radius: 10px;
